# fng_source

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fng.cpp  fng.hpp  fng_bindings.cpp  main.cpp  prng_uniform.hpp
examples/: stats_neu.ipynb
openmc_sampled/: README.md  fng_source.cpp  fng_source.hpp
openmc_sampled_ag/: CMakeLists.txt  README.md  fng_source.hpp
src/: CMakeLists.txt  fng.cpp  fng.hpp  fng_bindings.cpp  main.cpp  prng_uniform.cpp
